# dynamic_loss

./: .gitignore  .gitmodules  download_cc_logs.sh  pyproject.toml  pyrightconfig.json  requirements.txt  run_python.sh  scratch.py
apptainer/: build_container.sh  build_container_sandbox.sh  convert_container_to_sandbox.sh  convert_sandbox_to_container.sh  pilfer_container_files.sh  pilfer_sandbox_files.sh  setup_overlay.sh
job_scripts/training/: submit_train_base_all_thresholded_models_failed.sh  submit_train_base_models.sh  submit_train_base_thresholded_models.sh
job_scripts/tuning/: submit_reevaluate.sh  submit_tuning.sh
paper/notes/: Makefile  build_citations.sh  build_mathjax.sh  dynamic_loss.bib  mdstyle.html  notes.md
reproducibility/: cifar-10_train_full_consolidated_ensemble_idx.npy  cifar-10_val_consolidated_targs.npy
results/ensemble_evals/learned/each/: 2022.12.11--20-36-40.184674.json  2022.12.11--20-37-23.967526.json  2022.12.11--20-38-06.340639.json  2022.12.11--20-38-46.297965.json  2022.12.11--20-39-26.890605.json  (+123 more)
scripts/: base_train.py  base_train_all_thresholds.py  base_train_threshold.py  download_data.py  download_tiny_imagenet.sh  ensemble_test.py  evaluate.py  fix_tiny_imagenet.py  loss_demonstration.py  reevaluate.py  summarize.py  tune.py
src/: augments.py  callbacks.py  config.py  constants.py  dynamic_loss.py  ensemble.py  enumerables.py  genetic.py  loaders.py  metrics.py  models.py  parsing.py  train.py  wideresnet.py
src/loaders/: ensemble.py  loaders.py  preds.py
test/: test_persistent_idx.py  test_reproducible_splits.py
(+60 files in other folders)
